# laiout-rust-challenge

./: Cargo.toml  README.md
src/: main.rs
